# Kolektiv

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  requirements.txt
abstracts/: history_handler_abstract.py  image_handler_abstract.py
commands/: add_layer_command.py  apply_blur_command.py  apply_edge_detection_filter_command.py  apply_high_pass_filter_command.py  apply_laplacian_filter_command.py  apply_sharpen_command.py  apply_transform_command.py  command.py  remover_layer_command.py
controller/: blur_controller.py  controller_interface.py  file_controller.py  filter_controller.py  history_controller.py  layer_controller.py  main_controller.py
entities/: layer.py
managers/: history_manager.py  layer_manager.py  simple_history_manager.py
model/: image_processor.py  layer.py
processors/: history_processor.py  image_processor.py
strategies/: blur_strategies.py  edge_detection_stategies.py  high_pass_filter_stategies.py  laplacian_filter_stategy.py  sharpen_strategies.py  transform_strategies.py
view/: kernel_size_dialog.py  main_window.py
view/components/atoms/: icon_button.py  image_label.py  label.py  slider.py  status_bar.py
view/components/molecules/: blur_settings_dialog.py  confirm_dialog.py  edge_detection_dialog.py  highpass_settings_dialog.py  laplacian_dialog.py  layer_list_item.py  sharpen_setting_dialog.py  slide_with_label.py  toolbar_button.py  transform_dialog.py
view/components/organisms/: layers_context_menu.py  layers_panel.py  main_toolbar.py
view/components/templates/: main_layout.py
