[tool.poetry]
name = "editor-imagens"
version = "0.1.0"
description = "editor de imagens"
authors = ["печа <pedrovianaasking@gmai.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyqt5 = "^5.15.11"
opencv-python-headless = "^4.10.0.84"
numpy = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
image_editor = "main:main"